--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,26 @@
 @charset "UTF-8";
+nav {
+  font-family: "Spectral", Georgia, serif;
+  font-weight: 400;
+}
+
+h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
+  font-family: "Spectral", Georgia, serif;
+  font-weight: 700;
+}
+
+h4, .h4 {
+  text-transform: uppercase;
+  color: #000000 !important;
+}
+
 html,
 body {
   height: 100%;
 }
 
 body {
+  font-family: "Hind", Tahoma, sans-serif;
   background-color: #F3F3F3 !important;
   margin: 0;
   padding: 0;
@@ -20,12 +36,63 @@ img {
   flex: 1 0 auto;
 }
 
-.navbar-top {
+.navbar-small-screens {
   background-color: #F3F3F3;
+}
+
+.navbar-toggler {
+  border: 0 !important;
+}
+
+.navbar-one-bigger-screens {
+  background-color: #F3F3F3;
+}
+
+.navbar-two-bigger-screens {
+  background-color: #11224E;
+}
+
+.nav-border-button {
+  border: 2px solid #FFFFFF;
+}
+
+.navbar-collapse {
+  background-color: #11224E;
 }
 
 .logo {
   width: 180px;
+}
+
+.footer-part-one {
+  gap: 40px;
+  flex-direction: column;
+  padding-top: 30px;
+  padding-bottom: 10px;
+}
+
+.footer-part-one div {
+  width: 200px;
+}
+
+footer a {
+  text-decoration: none;
+  color: #000000 !important;
+}
+
+footer i {
+  font-size: 1.7rem;
+  color: #2C599D;
+  margin-bottom: 15px;
+}
+
+.footer-part-one__short-menu p:hover {
+  text-decoration: underline;
+}
+
+.footer-part-two {
+  color: #11224E;
+  font-size: 0.85rem;
 }
 
 /*!
@@ -100,7 +167,7 @@ img {
   --bs-dark-border-subtle: #adb5bd;
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
-  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --bs-font-sans-serif: "Hind", Tahoma, sans-serif;
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
   --bs-body-font-family: var(--bs-font-sans-serif);
@@ -242,7 +309,8 @@ hr {
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
-  font-weight: 500;
+  font-family: "Spectral", Georgia, serif;
+  font-weight: 700;
   line-height: 1.2;
   color: var(--bs-heading-color, inherit);
 }
@@ -275,12 +343,7 @@ h3, .h3 {
 }
 
 h4, .h4 {
-  font-size: calc(1.275rem + 0.3vw);
-}
-@media (min-width: 1200px) {
-  h4, .h4 {
-    font-size: 1.5rem;
-  }
+  font-size: 1.2rem;
 }
 
 h5, .h5 {
@@ -8395,7 +8458,7 @@ textarea.form-control-lg {
 }
 
 .fs-4 {
-  font-size: calc(1.275rem + 0.3vw) !important;
+  font-size: 1.2rem !important;
 }
 
 .fs-5 {
@@ -12015,9 +12078,6 @@ textarea.form-control-lg {
   .fs-3 {
     font-size: 1.75rem !important;
   }
-  .fs-4 {
-    font-size: 1.5rem !important;
-  }
 }
 @media print {
   .d-print-inline {
@@ -12063,5 +12123,30 @@ header .btn {
 
 .featured-auctions-section {
   margin-top: 90px;
-  padding-top: 30px;
+  padding: 30px 40px 70px 40px;
+}
+
+.auction-cards {
+  gap: 50px;
+}
+
+.auction-card {
+  border-bottom: 2px solid #FFA64D;
+  border-right: 2px solid #FFA64D;
+  box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.15);
+}
+
+@media (min-width: 400px) {
+  .footer-part-one {
+    flex-direction: row;
+  }
+  footer i {
+    margin-bottom: 8px;
+  }
+}
+@media (min-width: 992px) {
+  .featured-auctions-section {
+    margin-top: 159px;
+    padding-top: 30px;
+  }
 }/*# sourceMappingURL=style.css.map */
