--- a/sass/partials/_home.scss
+++ b/sass/partials/_home.scss
@@ -1,4 +1,14 @@
 .featured-auctions-section {
   margin-top: 90px;
-  padding-top: 30px;
+  padding: 30px 40px 70px 40px;
+}
+
+.auction-cards {
+  gap: 50px;
+}
+
+.auction-card {
+  border-bottom: 2px solid $orange-400;
+  border-right: 2px solid $orange-400;
+  box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.15);
 }
