--- a/sass/partials/_media.scss
+++ b/sass/partials/_media.scss
@@ -9,7 +9,7 @@
 }
 
 @media (min-width: 992px) {
-  .featured-auctions-section {
+  .featured-auctions-section, .login__form-section, .sign-up__form-section, .auction__main-section, .create-listing__form-section {
     margin-top: 159px;
     padding-top: 30px;
   }
