--- a/sass/style.scss
+++ b/sass/style.scss
@@ -58,4 +58,7 @@
 
 @import "partials/forms";
 @import "partials/home";
+@import "partials/login";
+@import "partials/sign-up";
+@import "partials/create-listing";
 @import "partials/media";
