--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -30,6 +30,9 @@ img {
 
 .navbar-one-bigger-screens {
   background-color: $gray-400;
+  li {
+    margin-left: 20px;
+  }
 }
 
 .navbar-two-bigger-screens {
