--- a/sass/style.scss
+++ b/sass/style.scss
@@ -61,4 +61,5 @@
 @import "partials/login";
 @import "partials/sign-up";
 @import "partials/create-listing";
+@import "partials/auction-details";
 @import "partials/media";
