--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -99,6 +99,11 @@ nav input {
   font-size: 1.3rem;
 }
 
+.error {
+  color: #D82C00;
+  margin: 5px 0;
+}
+
 footer {
   border-top: 4px solid $primary;
 }
