--- a/sass/partials/_home.scss
+++ b/sass/partials/_home.scss
@@ -1,6 +1,7 @@
 .featured-auctions-section {
   margin-top: 90px;
   padding: 30px 40px 70px 40px;
+  min-height: 85vh;
 }
 
 .auction-cards {
@@ -8,6 +9,7 @@
 }
 
 .auction-card {
+  padding-top: 10px;
   border-bottom: 2px solid $orange-400;
   border-right: 2px solid $orange-400;
   box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.15);
