--- a/sass/partials/_create-listing.scss
+++ b/sass/partials/_create-listing.scss
@@ -1,6 +1,7 @@
 .create-listing__form-section {
   margin-top: 90px;
   padding: 30px 40px 70px 40px;
+  min-height: 85vh;
 
   .form-control {
     max-width: 500px;
