--- a/sass/partials/_media.scss
+++ b/sass/partials/_media.scss
@@ -13,6 +13,10 @@
 }
 
 @media (min-width: 992px) {
+  .nav__username-and-credits {
+    color: #FFFFFF;
+  }
+  
   .featured-auctions-section, .login__form-section, .sign-up__form-section, .auction__main-section, .create-listing__form-section {
     margin-top: 159px;
     padding-top: 30px;
