--- a/sass/partials/_media.scss
+++ b/sass/partials/_media.scss
@@ -12,9 +12,19 @@
   }
 }
 
+@media (min-width: 576px) {
+  #account-info-container {
+    top: 105px;
+    bottom: auto;
+  }
+}
+
 @media (min-width: 992px) {
-  .nav__username-and-credits {
-    color: #FFFFFF;
+  #account-info-container {
+    padding: 15px 15px;
+    position: absolute;
+    top: 175px;
+    right: 0;
   }
   
   .featured-auctions-section, .login__form-section, .sign-up__form-section, .auction__main-section, .create-listing__form-section {
