--- a/sass/partials/_media.scss
+++ b/sass/partials/_media.scss
@@ -24,7 +24,7 @@
     top: 175px;
   }
   
-  .featured-auctions-section, .login__form-section, .sign-up__form-section, .auction__main-section, .create-listing__form-section {
+  .featured-auctions-section, .login__form-section, .sign-up__form-section, .auction__main-section, .create-listing__form-section, .my-account__form-section {
     margin-top: 159px;
     padding-top: 30px;
   }
