--- a/sass/style.scss
+++ b/sass/style.scss
@@ -62,4 +62,5 @@
 @import "partials/sign-up";
 @import "partials/create-listing";
 @import "partials/auction-details";
+@import "partials/my-account";
 @import "partials/media";
