--- a/sass/partials/_colors.scss
+++ b/sass/partials/_colors.scss
@@ -2,6 +2,7 @@ $light: #F3FAFF;
 $primary: #2C599D;
 $headings-color: $primary;
 $gray-400: #F3F3F3;
+$blue-400: #A0BDE0;
 $blue-900: #11224E;
 $orange-400: #FFA64D;
 $orange-600: #F88125;
