--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,17 @@ nav input {
   font-size: 1.3rem;
 }
 
+.cta:hover {
+  background-color: #FFA64D;
+  border: 3px solid #A0BDE0;
+  text-decoration: underline;
+}
+
+.btn:hover {
+  text-decoration: underline;
+  background-color: #11224E !important;
+}
+
 .error {
   color: #D82C00;
   margin: 5px 0;
@@ -12372,9 +12383,12 @@ header .btn {
 }
 
 .auction__bids {
-  grid-template-columns: 1fr 1fr;
   margin-bottom: 30px;
   max-width: 450px;
+}
+
+.auction__bids p {
+  margin-right: 20px;
 }
 
 .auction__description-section p {
@@ -12424,13 +12438,16 @@ header .btn {
     margin-top: 159px;
     padding-top: 30px;
   }
+  .auction-cards {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
   .auction__main-section {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 60px;
   }
   .auction__details-section {
-    margin-top: 0;
+    margin-top: 11px;
   }
   .auction__date-p {
     margin-bottom: 40px;
