--- a/sass/partials/_media.scss
+++ b/sass/partials/_media.scss
@@ -35,6 +35,10 @@
     padding-top: 30px;
   }
 
+  .auction-cards {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
   .auction__main-section {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -42,7 +46,7 @@
   }
 
   .auction__details-section {
-    margin-top: 0;
+    margin-top: 11px;
   }
 
   .auction__date-p {
