--- a/sass/partials/_media.scss
+++ b/sass/partials/_media.scss
@@ -30,7 +30,7 @@
     top: 175px;
   }
   
-  .featured-auctions-section, .login__form-section, .sign-up__form-section, .auction__main-section, .create-listing__form-section, .my-account__form-section {
+  .featured-auctions-section, .login__form-section, .sign-up__form-section, .auction__main-section, .create-listing__form-section, .my-account__form-section, .auction-details__search-results-container {
     margin-top: 159px;
     padding-top: 30px;
   }
@@ -43,6 +43,11 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 60px;
+  }
+
+  .auction-details-h1 {
+    grid-column: -1/1;
+    margin-bottom: -50px;
   }
 
   .auction__details-section {
